erDiagram

  EXERCISE {
    int id PK
    int exerciseTemplateId FK
    string name
  }

  EXERCISE_TEMPLATE {
    int id PK
    string name
  }

  EXERCISE_SET {
    int setNumber PK
    int exerciseId FK
    double weightKg
    int reps
    int restTimeSeconds
    int rpe
  }

  EXERCISE_TEMPLATE ||--|{ EXERCISE : "conté"
  EXERCISE ||--|{ EXERCISE_SET : "conté"
